# timon

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: build.yml  release.yml
assets/themes/: atom-one-dark.toml  atom-one-light.toml
packaging/: README.md
packaging/linux/: io.vacivor.timon.desktop  io.vacivor.timon.flatpak.yml  io.vacivor.timon.metainfo.xml
scripts/ci/: build-unix.sh  build-windows.ps1  install-linux-deps.sh  package-linux.sh  package-macos-universal-dmg.sh  package-macos-universal-pkg.sh  package-macos.sh
src/: app.rs  main.rs  models.rs  persistence.rs  session.rs  terminal.rs  terminal_atlas.wgsl
src/app/: constants.rs  helpers.rs  icons.rs  shortcuts.rs  state.rs  styles.rs  update.rs  view.rs
