[package]
name = "timon"
version = "0.1.0"
edition = "2024"
description = "SSH and local terminal client rendered with iced"
license = "Proprietary"

[dependencies]
alacritty_terminal = "0.26.0"
anyhow = "1.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
iced = { version = "0.14.0", features = ["tokio", "canvas", "advanced", "image", "svg"] }
iced_wgpu = "0.14.0"
portable-pty = "0.9.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
russh = "0.60.0"
russh-sftp = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.4", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSGlassEffectView", "NSGraphics", "NSResponder", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSGeometry", "NSThread"] }

[package.metadata.bundle]
name = "Timon"
identifier = "io.vacivor.timon"
short-description = "SSH and local terminal client rendered with iced"
category = "Developer Tool"

[package.metadata.packager]
product-name = "Timon"
identifier = "io.vacivor.timon"

[package.metadata.deb]
name = "timon"
maintainer = "Vacivor"
copyright = "2026, Vacivor"
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
  ["packaging/linux/io.vacivor.timon.desktop", "usr/share/applications/io.vacivor.timon.desktop", "644"],
  ["packaging/linux/io.vacivor.timon.metainfo.xml", "usr/share/metainfo/io.vacivor.timon.metainfo.xml", "644"],
  ["packaging/linux/io.vacivor.timon.svg", "usr/share/icons/hicolor/scalable/apps/io.vacivor.timon.svg", "644"],
]

[package.metadata.generate-rpm]
name = "timon"
summary = "SSH and local terminal client rendered with iced"
license = "Proprietary"
assets = [
  { source = "target/release/timon", dest = "/usr/bin/timon", mode = "0755" },
  { source = "packaging/linux/io.vacivor.timon.desktop", dest = "/usr/share/applications/io.vacivor.timon.desktop", mode = "0644" },
  { source = "packaging/linux/io.vacivor.timon.metainfo.xml", dest = "/usr/share/metainfo/io.vacivor.timon.metainfo.xml", mode = "0644" },
  { source = "packaging/linux/io.vacivor.timon.svg", dest = "/usr/share/icons/hicolor/scalable/apps/io.vacivor.timon.svg", mode = "0644" },
]
