[package]
name = "timon"
version = "0.1.0"
edition = "2024"
description = "SSH and local terminal client rendered with iced"
license = "Proprietary"

[dependencies]
alacritty_terminal = "0.26.0"
anyhow = "1.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
iced = { version = "0.14.0", features = ["tokio", "canvas", "advanced", "image", "svg"] }
iced_wgpu = "0.14.0"
libc = "0.2"
portable-pty = "0.9.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
russh = "0.60.0"
russh-sftp = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2+spec-1.1.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }

[package.metadata.bundle]
name = "Timon"
identifier = "io.vacivor.timon"
short-description = "SSH and local terminal client rendered with iced"
category = "Developer Tool"

[package.metadata.packager]
product-name = "Timon"
identifier = "io.vacivor.timon"

[[bin]]
name = "Timon"
path = "src/main.rs"
